--- a/findly-builder/src/app/components/content-source/content-source.component.html
+++ b/findly-builder/src/app/components/content-source/content-source.component.html
@@ -593,7 +593,7 @@
   </div>
   <div class="modal-footer moadal-footer-config" *ngIf="isConfig">
     <button type="button" class="kr-sg-button-primary btn_md btn-left-config-ok" data-dismiss="modal"
-      (click)="proceedWithConfigUpdate()">Ok</button>
+      (click)="proceedWithConfigUpdate()">Save</button>
     <button type="button" class="kr-sg-button-secondary btn_md btn-left-config-ca" data-dismiss="modal"
       (click)="closeStatusModal()">Cancel</button>
   </div>
