faqs alignements issues fixed

--- a/findly-builder/src/app/components/add-faq/add-faq.component.html
+++ b/findly-builder/src/app/components/add-faq/add-faq.component.html
@@ -133,7 +133,7 @@
         </div>
       </div>
     </div>
-    <div class="p-1 row responseEditorContainer" *ngIf="currentEditIndex === index">
+    <div class="row responseEditorContainer m-0" *ngIf="currentEditIndex === index">
       <div class="col-6 p-1 col_">
         <div class="tabs-sec">
           <span class="tab-title " (click)="faqObj.type='string'" [ngClass]="{'active': faqObj.type === 'string'}">Editor</span>
