--- a/findly-builder/src/app/components/faq-source/faq-source.component.html
+++ b/findly-builder/src/app/components/faq-source/faq-source.component.html
@@ -133,7 +133,7 @@
                        </div>
                     </ng-container>
                     <ng-container *ngIf="selectedFaq">
-                    <div class="header-sec with-info row m-0" *ngIf="selectedFaq && selectedFaq.state === 'in_review'">
+                    <div class="header-sec with-info row m-0 d-none" *ngIf="selectedFaq && selectedFaq.state === 'in_review'">
                         <div class="col_ p-0 source col-2" ngbTooltip="{{(selectedFaq.sourceName || contentTypes[selectedFaq.source]) | titlecase}}" placement="top">
                             <div class="heading">Source</div>
                             <div class="info-title">{{(selectedFaq.sourceName || contentTypes[selectedFaq.source]) | titlecase}}</div>
@@ -167,7 +167,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="header-info-que" *ngIf="selectedFaq && selectedFaq.state === 'draft'">
+                    <div class="header-info-que d-none" *ngIf="selectedFaq && selectedFaq.state === 'draft'">
                         <div class="col_ p-0 source col-2" ngbTooltip="{{(selectedFaq.sourceName || contentTypes[selectedFaq.source]) | titlecase}}" placement="top">
                             <div class="heading">Source</div>
                             <div class="info-title">{{(selectedFaq.sourceName || contentTypes[selectedFaq.source] || 'Manual') | titlecase}}</div>
@@ -189,7 +189,7 @@
                         </div>    
                                       
                     </div>
-                    <div class="header-info-que with-info" *ngIf="selectedFaq && selectedFaq.state === 'approved'">
+                    <div class="header-info-que with-info d-none" *ngIf="selectedFaq && selectedFaq.state === 'approved'">
                         <div class="col-2 p-0" ngbTooltip='{{(selectedFaq.sourceName || contentTypes[selectedFaq.source]) | titlecase}}'  placement="top">
                             <div class="heading">Source</div>
                             <div class="info-title">{{(selectedFaq.sourceName  || contentTypes[selectedFaq.source]) | titlecase}}</div>
@@ -226,14 +226,69 @@
                             </div>
                         </div>                       
                     </div>
+                    <div class="header-info-que">
+                        <div class="row m-0 col-12 p-0">
+                            <div class="col-5 p-0 lef-info">
+                                <div class="approved_title">Approved ON</div>
+                                <div class="approved_date" ngbTooltip="{{selectedFaq.modifiedOn | dateFormatPipe:'MM-DD-YYYY hh:mm:ss'}}" placement="top-left">{{selectedFaq.modifiedOn | dateFormatPipe:'MM-DD-YYYY hh:mm:ss'}}</div>
+                            </div>
+                            <div class="col-7 p-0 actions-sec">
+                                <div class="kr-sg-dropdowns info_header_dropdown" ngbDropdown [container]="'body'" [placement]="'bottom-right'">                                        
+                                    <div class="dropdown dropdown-open">                                        
+                                        <button class="dropdown-toggle dropdown-input" ngbDropdownToggle><img src="assets/icons/info_header.svg"></button>                                            
+                                        <ul class="dropdown-menu content-menu info_header_dropdown_content" ngbDropdownMenu>
+                                            <div class="row m-0 col-12 p-0">
+                                                <div class="col-2 inner-data-column">
+                                                    <div class="heading">Source</div>
+                                                    <div class="title" ngbTooltip='{{selectedFaq.source | titlecase}}' placement="top-left">{{(selectedFaq.sourceName  || contentTypes[selectedFaq.source]) | titlecase}}</div>
+                                                </div>
+                                                <div class="col-2 inner-data-column">
+                                                    <div class="heading">Type</div>
+                                                    <div class="title" ngbTooltip='{{selectedFaq.source | titlecase}}' placement="top-left">{{contentTypes[selectedFaq.source] | titlecase}}</div>
+                                                </div>
+                                                <div class="col-4 inner-data-column">
+                                                    <div class="heading">Edited by</div>
+                                                    <div class="title" ngbTooltip="{{selectedFaq.userDetails?selectedFaq.userDetails.fullName:'---'}}" placement="top-left">{{selectedFaq.userDetails?selectedFaq.userDetails.fullName:'---'}}</div>
+                                                </div>
+                                                <div class="col-4 inner-data-column">
+                                                    <div class="heading">Reviewed by</div>
+                                                    <div class="title" ngbTooltip="{{(selectedFaq.reviewerDetails?selectedFaq.reviewerDetails.fullName:'---')}}" placement="top-left">{{(selectedFaq.reviewerDetails?selectedFaq.reviewerDetails.fullName:'---')}}</div>
+                                                </div>
+                                            </div>
+                                        </ul>
+                                    </div>
+                                </div>                             
+                                <div class="kr-sg-dropdowns comments_header_dropdown" ngbDropdown [container]="'body'" [placement]="'bottom-right'">                                        
+                                    <div class="dropdown dropdown-open">                                        
+                                        <button class="dropdown-toggle dropdown-input" ngbDropdownToggle><img class="cursor" src="assets/icons/comment.svg"></button>                                            
+                                        <ul class="dropdown-menu content-menu comments_header_dropdown_content d-none" ngbDropdownMenu>
+                                            
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="d-flex align-items-center justify-content-end">
+                                    <button class="kr-sg-button-primary btn_lg" (click)="updateFaq(selectedFaq,'stateUpdate','approved')">Send for Review</button>
+                                    <div class="kr-sg-dropdowns add" ngbDropdown [container]="'body'" [placement]="'bottom-right'">                                        
+                                        <div class="dropdown dropdown-open">
+                                            <button class="dropdown-toggle dropdown-input" ngbDropdownToggle data-toggle="dropdown"><img src="assets/icons/dropdown-arrow.svg"></button>                                            
+                                            <ul class="dropdown-menu content-menu faq-filter-add pt-1 pb-1" ngbDropdownMenu>
+                                                <li (click)="updateFaq(selectedFaq,'stateUpdate','draft')">Move to Drafts</li>
+                                                <li class="delete-text cursor-pointer" (click)="deleteInfividualQuestion(selectedFaq)">Delete</li>                                        
+                                            </ul>
+                                        </div>
+                                    </div>                                    
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <perfect-scrollbar class="train-questions-body-scroll" #editQaScrollContainer>               
                         <div class="body-content" id="questionList">
                             <!-- <app-add-faq (editFaq)="editFaq($event)" [faqData]="selectedFaq" (cancelfaqEvent)="faqCancle()" *ngIf="editfaq && selectedFaq"></app-add-faq> -->
                             <div class="body-top-content" *ngIf="!editfaq">
                                 <div class="question-content">
                                     <div class="title-que">
-                                        <span class="">{{selectedFaq.question}}</span>
-                                        <img src="assets/icons/edit.svg" (click)="editThisQa()" ngbTooltip='Edit'  placement="bottom">
+                                        <span class="">{{selectedFaq.question}}</span>                                       
+                                        <button class="kr-sg-button-secondary btn_lg" (click)="editThisQa()" ngbTooltip='Edit'  placement="bottom">Edit</button>
                                     </div>
                                     <div class="keywords">
                                         <span class="key-title">Key Terms :</span>
@@ -297,13 +352,13 @@
                                         <span>{{selectedFaq.alternateQuestions?.length>0?'('+selectedFaq.alternateQuestions?.length+')':''}}</span>
                                         <!-- ({{(selectedFaq.alternateQuestions?selectedFaq.alternateQuestions.length:0)}}) -->
                                     </div>
-                                    <div class="added-tags text-truncate">Add alternate forms of the question, key terms.</div>
+                                    <div class="que-desc text-truncate">Add alternate forms of the question, key terms.</div>
                                 </div>
                                 <div class="col-2 p-0 text-right">
                                     <button class="kr-sg-button-primary btn_lg" (click)="addAlternate()">Add</button>
                                 </div>
                             </div>
-                            <div *ngIf="selectedFaq.isAlt">
+                            <div *ngIf="selectedFaq.isAlt" class="alternate-question-bg">
                                 <app-add-alternate-question [faqServ]="faqServiceAlt"></app-add-alternate-question>
                             </div>
                             <ng-container *ngIf="selectedFaq.alternateQuestions?.length">
@@ -315,12 +370,12 @@
                                 <img src="assets/icons/delete-table.svg" (click)="delAltQues(alternateQuestion)" class="delete-icon cursor-pointer" [ngClass]="{'pos-trash': alternateQuestion?.keywords?.length == 0}">
                             </div>
                            </ng-container>
-                            <div class="add-alternative-questions row">
+                            <div class="add-alternative-questions row followup_questions">
                                 <div class="col-10 pl-0 pr-2">
                                     <div class="question-name text-truncate">Followup Questions 
                                         {{(selectedFaq.followupQuestions?.length>0?'('+selectedFaq.followupQuestions.length+')':'')}}
                                     </div>
-                                    <div class="added-tags text-truncate">Add followup the question, key terms.</div>
+                                    <div class="que-desc text-truncate">Add followup the question, key terms.</div>
                                 </div>
                                 <div class="col-2 p-0 text-right">
                                     <button class="kr-sg-button-primary btn_lg" (click)="addFollowUp()">Add</button>
@@ -459,9 +514,9 @@
           <div class="title">Add Follow Up FAQ</div>
           <div class="close_icon"><img class="ng-tns-c11-2" (click)="cancleAddFollowUp()" src="assets/icons/modal-close.svg"></div>
         </div>
-      <perfect-scrollbar class="perfect-scroll-modal-body">
+      <perfect-scrollbar class="app-add-faq-insidescroll">
         <div class="modal-body">
-                <app-add-faq (addFaq)="addNewFollowUp($event)" [faqUpdate]="faqUpdate.asObservable()" [isFollowUp]='true' (cancelfaqEvent)="cancleAddFollowUp()"></app-add-faq>  
+            <app-add-faq (addFaq)="addNewFollowUp($event)" [faqUpdate]="faqUpdate.asObservable()" [isFollowUp]='true' (cancelfaqEvent)="cancleAddFollowUp()"></app-add-faq>  
         </div>
       </perfect-scrollbar> 
         <div class="modal-footer">
